erDiagram
    AIRLINE {
        int Airline_ID PK
        string Airline_Name
        string Country
        string Headquarters
        string Email
        string IATA_Designator_Codes UK
    }

    AIRCRAFT {
        int Aircraft_ID PK
        int Airline_ID FK
        string Model
        date Manufacture_Date
        int Total_Flight_Hours
        int Total_Flight_Cycle
        int Tot_Eco_Seats
        int Tot_Bus_Seats
        decimal Total_Fuel_Capacity
    }

    AIRCRAFT_LIVE_STATUS {
        int Aircraft_ID PK
        decimal Current_Fuel_Level
        string Location
        string Status_Type
        decimal Current_Speed
        string Autopilot_Status
        decimal Cabin_Pressure_PSI
        decimal Outside_Air_Temperature
        decimal Altitude
        boolean Is_In_Aviation
        timestamp Last_Updated
    }

    AIRCRAFT_SEAT_MAP {
        int Aircraft_ID PK
        string Seat_Number PK
        string Seat_Type 
        string Seat_Class_Features
    }

    MAINTENANCE {
        int Maintenance_ID PK
        int Aircraft_ID FK
        string Maintenance_Type
        text Technician_Notes
        string Maintenance_Status
        date Scheduled_Date
        date Actual_Start_Date
        date Completion_Date
        decimal Total_Cost
    }

    AIRPORT {
        int Airport_ID PK
        string Airport_Name
        string City
        string State
        string Country
        string IATA_Code UK
    }

    RUNWAY {
        int Airport_ID PK
        int Runway_ID PK
        string Surface_Type
        decimal Runway_Length
        string Status
    }

    GATE {
        int Airport_ID PK
        int Gate_No PK
        string Gate_Status
    }

    ROUTE {
        int Route_ID PK
        decimal Distance
        int Estimated_Duration
        int Source_Airport_ID FK
        int Dest_Airport_ID FK
    }

    ROUTE_FARE {
        int Route_ID PK
        string Seat_Type PK
        decimal Fare_Amount
    }

    FLIGHT {
        int Flight_ID PK
        int Aircraft_ID FK
        timestamp Scheduled_Departure_Time
        timestamp Scheduled_Arrival_Time
        timestamp Actual_Departure_Time
        timestamp Actual_Arrival_Time
        string Flight_Status
        int Departure_Delay_Minutes
        int Arrival_Delay_Minutes
    }

    FLIGHT_LEGS {
        int Flight_ID PK
        int Route_ID PK
        int Leg_Sequence_No PK
        timestamp Scheduled_Takeoff_Time
        timestamp Scheduled_Landing_Time
        timestamp Actual_Takeoff_Time
        timestamp Actual_Landing_Time
        string Leg_Status
        int Takeoff_Delay_Minutes
        int Landing_Delay_Minutes
    }

    PILOT {
        int Pilot_ID PK
        string Name
        string License_Number UK
        string Email
        string Experience_Level
    }

    CREW {
        int Crew_ID PK
        string Name
        string Role
        int Experience
        string Language_Proficiency
    }

    USER {
        int User_ID PK
        string Name
        string Email UK
        string Phone
        string Address
    }

    RESERVATION {
        int Reservation_ID PK
        int User_ID FK
        date Booking_Date
        string Reservation_Status
    }

    BOOKING {
        int Booking_ID PK
        int Reservation_ID FK
        int Flight_ID FK
        int Route_ID FK
        int Leg_Sequence_No FK
        string Seat_Type
        string Seat_Number
        decimal Fare_Amount
        string Booking_Status
        timestamp Created_At
    }

    LUGGAGE {
        int Luggage_ID PK
        int Booking_ID FK
        string Tag_Number
        decimal Weight
    }

    PILOT_ASSIGN {
        int Flight_ID PK
        int Route_ID PK
        int Leg_Sequence_No PK
        int Pilot_ID PK
    }

    CREW_ASSIGN {
        int Flight_ID PK
        int Route_ID PK
        int Leg_Sequence_No PK
        int Crew_ID PK
    }

    USES_RUNWAY {
        int Flight_ID PK
        int Route_ID PK
        int Leg_Sequence_No PK
        int Airport_ID PK
        int Runway_ID PK
        string Usage_Type
    }

    USES_GATE {
        int Flight_ID PK
        int Route_ID PK
        int Leg_Sequence_No PK
        int Airport_ID PK
        int Gate_No PK
        string Usage_Type
    }

    AIRLINE ||--o{ AIRCRAFT : owns
    AIRCRAFT ||--o| AIRCRAFT_LIVE_STATUS : "current status"
    AIRCRAFT ||--o{ MAINTENANCE : undergoes
    AIRCRAFT ||--o{ FLIGHT : operates
    AIRCRAFT ||--o{ AIRCRAFT_SEAT_MAP : has

    AIRPORT ||--o{ RUNWAY : has
    AIRPORT ||--o{ GATE : has
    AIRPORT ||--o{ ROUTE : "is source of"
    AIRPORT ||--o{ ROUTE : "is destination of"

    ROUTE ||--o{ FLIGHT_LEGS : "used on"
    ROUTE ||--o{ ROUTE_FARE : "priced by"
    FLIGHT ||--o{ FLIGHT_LEGS : "consists of"

    FLIGHT_LEGS ||--o{ BOOKING : has
    FLIGHT_LEGS ||--o{ PILOT_ASSIGN : has
    FLIGHT_LEGS ||--o{ CREW_ASSIGN : has
    FLIGHT_LEGS ||--o{ USES_RUNWAY : has
    FLIGHT_LEGS ||--o{ USES_GATE : has

    PILOT ||--o{ PILOT_ASSIGN : "assigned via"
    CREW ||--o{ CREW_ASSIGN : "assigned via"
    RUNWAY ||--o{ USES_RUNWAY : "used via"
    GATE ||--o{ USES_GATE : "used via"

    USER ||--o{ RESERVATION : makes
    RESERVATION ||--o{ BOOKING : contains
    BOOKING ||--o{ LUGGAGE : has
